# agent-bus

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.awf/artifacts/: 01-baseline.md  02-architecture-decision.md  03-taskcard-doctor.md  04-implementation-report.md  05-review-report.md  06-decision.md  07-taskcard-graceful-exit.md  08-implementation-report.md  09-review-report-p3.md  10-decision-p3.md  11-taskcard-poison-event.md  12-implementation-report.md  13-review-report-poison.md  14-taskcard-pending-count.md  15-implementation-report.md  16-taskcard-send-dryrun.md  17-implementation-report.md  18-taskcard-bootstrap-token.md  19-implementation-report.md  20-implementation-report-handler-argv.md  (+3 more)
.awf/tmp/: listener-e2e.env
client/: __init__.py  cli.py  context_config.py  listener_config.py
docs/: design.md  product-positioning.md  protocol.md  recommended-practices.md  roadmap.md  vision.md  worker.md
scripts/: agent-bus.service  install-docker.sh  install.sh  test-client-setup.py  test-docker.sh  test.sh  windows-poll-listener.ps1
server/: __init__.py  auth.py  bootstrap.py  cockpit.html  db.py  events.py  main.py  models.py  operator.py
tests/: test_auth.py  test_bootstrap_token.py  test_cli_config.py  test_cli_helpers.py  test_client_setup.py  test_context_config.py  test_docker_deployment.py  test_docker_installer.py  test_documentation.py  test_failure_lifecycle.py  test_listener_config.py  test_operator_cockpit.py  test_pending.py  test_poison_event.py  test_send_dryrun.py  test_version.py
(+13 files in other folders)
