[project]
name = "agent-bus"
version = "0.1.0"
description = "Agent Event Bus — cross-machine durable event relay for AI agent collaboration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.2",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
agent-bus = "client.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "client"]
